--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -1,233 +1,164 @@
-*{
-    font-style: italic;
-}
-header{
-    padding: 15px;
-    background-color: #c7b373;
-
-}
-
-.busqueda{
+header {
+  padding-top: 15px;
+  background-color: #c7b373; }
+  header .busqueda {
     display: flex;
     justify-content: space-between;
-}
-
-.logo img{
-    width: 200px;
+    padding-bottom: 15px; }
+    header .busqueda .logo img {
+      height: 50px;
+      width: 200px;
+      margin-left: 15px; }
+    header .busqueda #Searchbar {
+      height: 20px;
+      width: 700px;
+      padding-top: 4px;
+      margin-left: 15px;
+      margin-right: 15px; }
+    header .busqueda .login img {
+      height: 50px;
+      width: 50px;
+      margin-right: 15px; }
+  header .navbar {
     height: 50px;
-}
-
-#Searchbar {
-width: 700px;
-margin-left: 15px;
-margin-right: 15px;
-
-}
-
-.login img {
-    width: 50px;
-    height: 50px;
-}
-
-.navbar{
-    padding-top: 15px;
-    height: 60px;
     width: 100%;
     display: flex;
     justify-content: center;
-}
+    background-color: #d9c78f; }
+    header .navbar #lista1 li {
+      display: inline;
+      padding-left: 70px; }
+      header .navbar #lista1 li a {
+        font: normal 30px Arial;
+        text-decoration: none;
+        color: black;
+        padding-left: 10px;
+        padding-right: 10px;
+        transition: background-color .5s;
+        border-radius: 4px; }
+        header .navbar #lista1 li a:hover {
+          background-color: whitesmoke; }
 
-#lista1 li{
-    display: inline;
-    padding-left: 70px;
-}
+.Productos h1 {
+  font: normal 30px Arial;
+  text-align: center;
+  margin-top: 45px;
+  margin-bottom: 30px; }
 
-#lista1 li a{
-    text-decoration: none;
-    color: black;
-    font-size: 30px;
-    padding-left: 10px;
-    padding-right: 10px;
-    transition: background-color .5s;
-    border-radius: 4px;
-    
-}
-
-#lista1 li a:hover{
-    background-color: whitesmoke;
-}
-
-.Productos h1{
-    text-align: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    
-}
-
-.ImgProd{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding-top: 30px;
-    padding-bottom: 100px;
-}
-
-
-.ImgProd img{
+.Productos .ImgProd {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding-top: 25px;
+  padding-bottom: 30px; }
+  .Productos .ImgProd img {
     transition: transform .2s;
-    width: 150px;
     height: 200px;
-}
+    width: 150px; }
+    .Productos .ImgProd img:hover {
+      transform: scale(1.5); }
 
-.ImgProd img:hover{
-    transform: scale(1.5);
-}
-
-footer{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding-top: 10px;
-    background-color: #c7b373;
-    
-}
-.Footerinfo h2{
-    padding-bottom: 10px;
-    margin-top: 20px;
-}
-
-.Footerinfo {
-    text-align: center; 
+footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding-top: 20px;
+  margin-top: 30px;
+  background-color: #c7b373; }
+  footer .Footerinfo {
+    text-align: center;
     width: 230px;
-    margin-bottom: 30px;
-}
+    margin-bottom: 30px; }
+    footer .Footerinfo h2 {
+      font: normal 30px Arial;
+      padding-bottom: 10px;
+      margin-top: 20px; }
 
-.contenedor{
-    width: 100%;
-    padding: 15px;
-}
-.formulario{
-    margin-top: 150px;
-    padding: 3px;
-}
-.formulario h1{
+.formulario {
+  margin-top: 150px;
+  padding: 3px; }
+  .formulario h1 {
+    font: normal 30px Arial;
     text-align: center;
     color: #c7b373;
-    font-size: 40px;
-}
-.formulario input{
+    font-size: 40px; }
+  .formulario input {
     font-size: 20px;
     padding: 10px;
     width: 100%;
-    border: none;
-}
-.input-contenedor{
-    margin-bottom: 15px;
-    border: 1px solid #aaa;
-}
-
-.button{
-    border: none;
+    border: none; }
+  .formulario .contenedor {
     width: 100%;
-    color: white;
-    font-size: 20px;
-    background: #c7b373;
-    padding: 15px 20px;
-    border-radius: 5px;
-}
-.button:hover{
-    background: black;
-}
-p{
-    text-align: center;
-}
-.formulario .link{
-    text-decoration: none;
-      color:#c7b373;
-    font-weight: 600;
-}
-.formulario .link:hover{
-     color: black;
-}
+    padding: 15px; }
+    .formulario .contenedor .input-contenedor {
+      margin-bottom: 15px;
+      border: 1px solid #aaa; }
+    .formulario .contenedor .button {
+      border: none;
+      width: 100%;
+      color: white;
+      font-size: 20px;
+      background: #d9c78f;
+      padding: 15px 20px;
+      border-radius: 5px; }
+      .formulario .contenedor .button:hover {
+        background: #c7b373; }
+    .formulario .contenedor p {
+      text-align: center;
+      padding-top: 5px; }
+    .formulario .contenedor .link {
+      text-decoration: none;
+      color: #c7b373;
+      font-weight: 600; }
+      .formulario .contenedor .link:hover {
+        color: #d9c78f; }
 
-.formulario p{
-    padding-top: 5px;
-}
-
-@media(max-width:1000px)
-{
-    .logo img{
-        width: 75px;
-        height: 25px;
-    }
-    #Searchbar input{
-        height: 25px;
-    }
-
-    .login img{
-        height: 30px;
-        width: 30px;
-    }
-
-    #lista1 li{
-        padding-left: 0px;
-        padding-right: 0px;
-    }
-
-    #lista1 li a{
-        font-size: 20px;
-        padding-left: 5px;
-        padding-right: 5px;
-        
-    }
-
-    .navbar{
+@media (max-width: 1000px) {
+  header .busqueda .logo img {
+    height: 25px;
+    width: 75px; }
+  header .busqueda #Searchbar input {
+    height: 25px; }
+  header .busqueda .login img {
+    height: 30px;
+    width: 30px; }
+  header .navbar {
+    height: 65px;
     text-align: center;
     padding-top: 0px;
-    padding-right: 15px;
+    padding-right: 15px; }
+    header .navbar #lista1 {
+      padding-top: 6px; }
+      header .navbar #lista1 li {
+        padding-left: 0px;
+        padding-right: 0px; }
+        header .navbar #lista1 li a {
+          font-size: 20px;
+          padding-left: 5px;
+          padding-right: 5px; }
+  .Productos h1 {
+    font-size: 20px;
+    margin-top: 15px;
+    margin-bottom: 0px; }
+  .Productos .ImgProd {
+    padding-top: 10px;
+    padding-bottom: 10px; }
+  .Productos .ImgProd img {
+    margin-top: 20px; }
+  footer {
+    display: block; }
+    footer h2 {
+      font-size: 20px; }
+    footer .Footerinfo {
+      margin: 0 auto;
+      font-size: 15px;
+      padding-bottom: 5px; }
+    footer .ImgProd img {
+      margin-bottom: 15px; } }
 
-    }
-
-    .Productos h1{
-        font-size: 20px;
-        margin-top: 15px;
-        margin-bottom: 10px;
-    }
-
-    .ImgProd{
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-
-    footer{
-    display: block;
-
-    }
-
-    footer h2{
-        font-size: 20px;
-    }
-
-    .Footerinfo{
-        margin: 0 auto;
-        font-size: 15px;
-        padding-bottom: 5px;
-    }
-
-    .ImgProd img{ 
-    margin-bottom: 15px;
-    }
-
-}
-
-@media(min-width:768px)
-{
-    .formulario{
-        margin: auto;
-        width: 500px;
-        margin-top: 150px;
-        border-radius: 2%;
-    }
-}
-
-
+@media (min-width: 768px) {
+  .formulario {
+    margin: auto;
+    width: 500px;
+    margin-top: 150px;
+    border-radius: 2%; } }
